--- a/CSS/style.css
+++ b/CSS/style.css
@@ -326,8 +326,7 @@ h1 {
 
 #main .head button:hover {
 	transform: translateY(-3px) scale(1.05);
-	box-shadow: 0 8px 25px rgba(255, 87, 34, 0.4),
-		0 0 0 1px rgba(255, 87, 34, 0.1);
+	box-shadow: 0px 0px 25px rgb(255 87 34 / 24%), 0 0 0 1px rgba(255, 87, 34, 0.1);
 }
 
 #main .head button:active {
